<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.PostActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_post_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="100dp"
            android:text="@string/post_cancel" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/post_new" />
        <Button
            android:id="@+id/btn_post_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="100dp"
            android:text="@string/post_submit" />

    </LinearLayout>

    <EditText
        android:id="@+id/post_new_content"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:autofillHints=""
        android:padding="7sp"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:gravity="top|start"
        android:hint="@string/post_input_hint"/>

    <EditText
        android:id="@+id/post_new_tag"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="text"
        android:hint="@string/post_tag_hint" />

</LinearLayout>